todo app completed.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sqflite_practice">
    <application
-        android:label="sqflite_practice"
+        android:label="sqflite_toDo_app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
